Adicionado password.txt à gitignore. Adicionadas observacoes das tabelas

--- a/IEFP_DSSG/DataExploration.ipynb
+++ b/IEFP_DSSG/DataExploration.ipynb
@@ -60,25 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Password MySQL Server?:bi4ever\n"
-     ]
-    }
-   ],
+   "execution_count": 75,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "%%capture \n",
-    "mysqlpass = input('Password MySQL Server?:')"
+    "with open('password.txt') as f: mysqlpass = f.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 76,
    "metadata": {
     "scrolled": true
    },
