--- a/IEFP_DSSG/DataExploration.ipynb
+++ b/IEFP_DSSG/DataExploration.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_columns', 500)"
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.max_rows', 1000)"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +221,96 @@
    "metadata": {},
    "source": [
     "<img src=\".\\images\\UteId_Intersections_2016_longos.jpg\" title=\"UteId intersections between pedidos_inscritos_longos e pedido_fim_2016\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DCategoria</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DESEMPREGADO-NOVO EMPREGO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>EMPREGADO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DESEMP NOVO EMPREGO - INDISPONÍVEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>OCUPADO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EMPREGADO A TEMPO PARCIAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>DESEMPREGADO-1º EMPREGO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>DESEMP PRIMEIRO EMPREGO - INDISPONÍVEL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>EMPREGADO - INDISPONÍVEL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               DCategoria\n",
+       "0               DESEMPREGADO-NOVO EMPREGO\n",
+       "1                               EMPREGADO\n",
+       "2      DESEMP NOVO EMPREGO - INDISPONÍVEL\n",
+       "3                                 OCUPADO\n",
+       "4               EMPREGADO A TEMPO PARCIAL\n",
+       "5                 DESEMPREGADO-1º EMPREGO\n",
+       "6  DESEMP PRIMEIRO EMPREGO - INDISPONÍVEL\n",
+       "7                EMPREGADO - INDISPONÍVEL"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "querystring = 'SELECT DISTINCT(`DCategoria`) FROM sie_b'\n",
+    "pd.read_sql(querystring, connection)"
    ]
   },
   {
