Implementada geracao do historico dos utentes

--- a/IEFP_DSSG/DataExploration.ipynb
+++ b/IEFP_DSSG/DataExploration.ipynb
@@ -18,12 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
+    "import utente\n",
+    "\n",
+    "import importlib as imp\n",
+    "import sys\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
@@ -44,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,92 +230,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DCategoria</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>DESEMPREGADO-NOVO EMPREGO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EMPREGADO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DESEMP NOVO EMPREGO - INDISPONÍVEL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>OCUPADO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EMPREGADO A TEMPO PARCIAL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>DESEMPREGADO-1º EMPREGO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>DESEMP PRIMEIRO EMPREGO - INDISPONÍVEL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>EMPREGADO - INDISPONÍVEL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               DCategoria\n",
-       "0               DESEMPREGADO-NOVO EMPREGO\n",
-       "1                               EMPREGADO\n",
-       "2      DESEMP NOVO EMPREGO - INDISPONÍVEL\n",
-       "3                                 OCUPADO\n",
-       "4               EMPREGADO A TEMPO PARCIAL\n",
-       "5                 DESEMPREGADO-1º EMPREGO\n",
-       "6  DESEMP PRIMEIRO EMPREGO - INDISPONÍVEL\n",
-       "7                EMPREGADO - INDISPONÍVEL"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading from ./temp/ListaUtentes.pickle\n"
+     ]
     }
    ],
    "source": [
-    "querystring = 'SELECT DISTINCT(`DCategoria`) FROM sie_b'\n",
-    "pd.read_sql(querystring, connection)"
+    "imp.reload(sys.modules['utente'])\n",
+    "listaUtentes = utente.ListaUtentes()\n",
+    "listaUtentes.output2FileHistoricosTodosUtentes()"
    ]
   },
   {
