Adicionado modelo ElasticNet

--- a/IEFP_DSSG/PredictionModel.ipynb
+++ b/IEFP_DSSG/PredictionModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading from ./temp/ListaUtentes.pickle\n",
+      "Finished\n"
+     ]
+    }
+   ],
    "source": [
     "# Carregamento estrutura dados (passar parâmetro forceFetch = True para forçar leitura BD >> Demorado!)\n",
     "listaUtentes = utente.ListaUtentes(forceFetch = False, sqlLimit = 99999999999) # Carrega dados locais a partir de PICKLE"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,37 +388,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modelo LASSO"
+    "## Holdout Sampling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "\n",
     "#Split data in train set and test set\n",
     "\n",
     "y = dfM['DiasDesemprego']\n",
     "X = dfM.drop('DiasDesemprego', axis = 1)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
-    "\n",
-    "# #############################################################################\n",
-    "# Lasso\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LASSO Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso(alpha=0.01, copy_X=True, fit_intercept=True, max_iter=1000,\n",
+      "   normalize=False, positive=False, precompute=False, random_state=None,\n",
+      "   selection='cyclic', tol=0.1, warm_start=False)\n",
+      "r^2 on test data : 0.061185\n",
+      "Mean Abs Error on test data : 180.427180\n"
+     ]
+    }
+   ],
+   "source": [
     "from sklearn.linear_model import Lasso\n",
     "\n",
     "alpha = 0.01\n",
-    "lasso = Lasso(alpha=alpha, max_iter=100000, normalize = False)\n",
+    "lasso = Lasso(alpha=alpha, max_iter=1000, normalize = False, warm_start = False, tol = 0.1)\n",
     "\n",
     "y_pred_lasso = lasso.fit(X_train, y_train).predict(X_test)\n",
-    "r2_score_lasso = r2_score(y_test, y_pred_lasso)\n",
+    "\n",
     "print(lasso)\n",
-    "print(\"r^2 on test data : %f\" % r2_score_lasso)"
+    "print(\"r^2 on test data : %f\" % r2_score(y_test, y_pred_lasso))\n",
+    "print(\"Mean Abs Error on test data : %f\" % mean_absolute_error(y_test, y_pred_lasso))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ElasticNet Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ElasticNet(alpha=0.01, copy_X=True, fit_intercept=True, l1_ratio=0.0,\n",
+      "      max_iter=1000, normalize=False, positive=False, precompute=False,\n",
+      "      random_state=None, selection='cyclic', tol=0.0001, warm_start=False)\n",
+      "r^2 on test data : 0.063938\n",
+      "Mean Abs Error on test data : 180.117865\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\helio.teixeira\\onedrive\\python\\iefp_dssg\\venv64\\lib\\site-packages\\sklearn\\linear_model\\coordinate_descent.py:491: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Fitting data with very small alpha may cause precision problems.\n",
+      "  ConvergenceWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import ElasticNet\n",
+    "\n",
+    "alpha = 0.01\n",
+    "enet = ElasticNet(alpha=alpha, l1_ratio=0.0)\n",
+    "\n",
+    "y_pred_enet = enet.fit(X_train, y_train).predict(X_test)\n",
+    "\n",
+    "print(enet)\n",
+    "print(\"r^2 on test data : %f\" % r2_score(y_test, y_pred_enet))\n",
+    "print(\"Mean Abs Error on test data : %f\" % mean_absolute_error(y_test, y_pred_enet))"
    ]
   },
   {
