Adicionados comentarios CSoares

--- a/IEFP_DSSG/PredictionModel.ipynb
+++ b/IEFP_DSSG/PredictionModel.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Treinar com passado e testar com futuro...\n",
+    "#Growing windows\n",
+    "#Sliding Window\n",
+    "#Treino 1 semana e testo 1 mes\n",
+    "# Treino 2 semanas e testo 1 mes\n",
+    "# Começar com um lastro de dados...\n",
+    "# Media do modelo a evoluir ao longo do mes\n",
+    "# Random forest, support vector, \n",
+    "\n",
+    "# Fazer em R!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
